--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,14 +10,9 @@ on:
       - '.github/workflows/python.yml'
   pull_request:
     branches: [main]
-    paths:
-      - '**.py'
-      - 'pyproject.toml'
-      - 'stellaris-parser/**'
-      - '.github/workflows/python.yml'
 
 jobs:
-  lint:
+  python-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -38,8 +33,12 @@ jobs:
       - name: Run ruff formatter check
         run: ruff format --check .
 
-  test:
-    runs-on: ubuntu-latest
+  python-test:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
 
